# urinal-fish-bot

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  flake.nix
.github/workflows/: docker.yml
src/: choices.rs  commands.rs  components.rs  config.rs  discord.rs  easter_egg.rs  main.rs  message_events.rs  models.rs  recurrence.rs  scheduler.rs  storage.rs  validation.rs
